--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,7 @@
-# Python dependencies for polkadot-optimized scripts
+# Python dependencies for polkadot-optimized build and benchmark suite
 #
 # =============================================================================
-# CURRENT SETUP
-# =============================================================================
-#
-# Ubuntu (Python 3.12):
-#   - System packages (apt): requests, python-dateutil
-#   - pip --user: psutil, pandas, tomlkit
-#
-# Arch (Python 3.13):
-#   - pip system-wide (sudo pip): dateutil, psutil, pandas, tomlkit
-#   - Missing: requests
-#
-# =============================================================================
-# RECOMMENDED: System Packages
+# RECOMMENDED: System Packages (Preferred Method)
 # =============================================================================
 #
 # System packages are preferred because:
@@ -23,10 +11,13 @@
 #   - Avoids "externally-managed-environment" errors on modern Python
 #
 # Arch/CachyOS:
-#   sudo pacman -S python-psutil python-requests python-pandas python-tomlkit python-dateutil
+#   sudo pacman -S python-psutil python-requests python-pandas python-pyarrow \
+#                  python-tomlkit python-dateutil python-paretoset
 #
 # Ubuntu/Debian:
-#   sudo apt install python3-psutil python3-requests python3-pandas python3-tomlkit python3-dateutil
+#   sudo apt install python3-psutil python3-requests python3-pandas python3-pyarrow \
+#                    python3-tomlkit python3-dateutil
+#   pip install --user paretoset  # Not available as system package
 #
 # =============================================================================
 # ALTERNATIVE: pip install
@@ -34,18 +25,34 @@
 #
 # If you prefer pip (or system packages aren't available):
 #
-#   pip install --user -r requirements.txt   # user-local (recommended)
-#   sudo pip install -r requirements.txt     # system-wide (not recommended)
+#   pip install --user -r requirements.txt              # user-local (recommended)
+#   pip install --break-system-packages -r requirements.txt  # system-wide override
+#   sudo pip install -r requirements.txt                # system-wide (not recommended)
+#
+# Version constraints ensure compatibility while allowing minor updates.
 #
 # =============================================================================
 
-# compile.py
-tomlkit
-python-dateutil
+# Core dependencies for compile.py
+tomlkit>=0.12.0         # TOML parsing for Cargo.toml manipulation
+python-dateutil>=2.8.0  # Date/time calculations for build timing
 
-# run_benchmarks.py
-psutil
-requests
+# Dependencies for run_benchmarks.py
+psutil>=5.9.0           # System and process utilities for benchmarking
+requests>=2.31.0        # HTTP library for downloading chain specs
 
-# parse_benchmarks.py
-pandas
+# Dependencies for parse_benchmarks.py
+pandas>=2.0.0           # Data analysis and manipulation
+pyarrow>=14.0.0         # Apache Arrow for efficient data storage (feather format)
+
+# Dependencies for notebook analysis (optional but recommended)
+paretoset>=1.2.0        # Pareto frontier analysis for optimization comparison
+
+# =============================================================================
+# Optional: Jupyter notebook support for analysis
+# =============================================================================
+# Uncomment if you want to use the notebooks in ./notebook/
+#
+# jupyter>=1.0.0
+# matplotlib>=3.7.0
+# seaborn>=0.12.0
